feat: Implement REAL QR code scanning for web browsers!
 Web QR Scanner Implementation:
- Added ZXing library integration for real QR code detection
- Created WebQRScanner service with JavaScript interop
- Implemented camera access and QR code recognition in browsers
- Added proper error handling and timeout management

 Technical Implementation:
- ZXing library loaded via CDN for QR code detection
- JavaScript-Dart bridge using js package
- Real camera access through getUserMedia API
- Async/await pattern for seamless scanning experience

 User Experience:
- Click 'Escanear agora' to start real camera scanning
- Point camera at any QR code for automatic detection
- Works with URLs, PIX, WiFi, and all QR code types
- Fallback to manual input if camera not available

 Now QRShield works EXACTLY like Prezenzaa:
- Real-time QR code detection in web browsers
- No more mock/demo mode - actual scanning functionality
- Professional-grade implementation using industry standards

Ready to scan real QR codes in the browser!

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   camera: ^0.11.0+2
   google_mlkit_barcode_scanning: ^0.13.0
 
+  # Web QR scanning (real implementation like Prezenzaa)
+  js: ^0.6.7
+  html: ^0.15.4
+
   # HTTP requests
   http: ^1.2.2
 
